# Neo-GPS

./: .gitattributes  LICENSE  README.md
Hardware/GPS_Frontend/: .gitignore  GPS_Frontend.csv  GPS_Frontend.kicad_pcb  GPS_Frontend.kicad_prl  GPS_Frontend.kicad_pro  GPS_Frontend.kicad_sch  fp-info-cache  sym-lib-table
Hardware/Libs/: CustomSymbols.bak  CustomSymbols.kicad_sym
Hardware/Libs/CustomFootprints.pretty/: DBV0005A-IPC_A.kicad_mod  DBV0005A-IPC_B.kicad_mod  DBV0005A-IPC_C.kicad_mod  DBV0005A-MFG.kicad_mod  ECS-TXO-20CSMV4-192-AN-TR.step  OSC_ECS-TXO-20CSMV4-192-AN-TR.kicad_mod  PinHeader_2x06_P2.54mm_Horizontal_Pmod.kicad_mod  QFN50P500X500X80-29N.kicad_mod
Hardware/SD_Card_Logger/: .gitignore  fp-lib-table  sd_card_logger.kicad_pcb  sd_card_logger.kicad_prl  sd_card_logger.kicad_pro  sd_card_logger.kicad_sch  sym-lib-table  ~sd_card_logger.kicad_sch.lck
RTL/: .gitignore  CMakeLists.txt  verilator.py  vivado.py  waves.py
RTL/Simulated/: .gitignore  CMakeLists.txt  calc_crc7.py  verilator.py  waves.py
RTL/Simulated/inc/: common_gnss_types.vh
RTL/Simulated/src/: l1ca_code.sv  sd_cmd.sv
RTL/Simulated/src/sd/: sd_cmd.sv  sd_crc.sv  sd_data.sv  sd_host.sv
RTL/Simulated/src/sd/sd_fake/: common.v  sd_link.v  sd_params.vh  sd_phy.v  sd_wishbone.v
RTL/Simulated/src/spi/: spi_tx.sv
RTL/Simulated/testbench/: l1ca_code_tb.sv  sd_tb.sv  uart_tx_tb.sv
RTL/Simulated/testbench/gps/: l1ca_code_tb.sv
RTL/Simulated/testbench/sd/: sd_tb.sv
RTL/Simulated/testbench/spi/: spi_tx_tb.sv
RTL/Simulated/verilator/l1ca_code/: CMakeLists.txt  sim_main.cpp
RTL/Simulated/verilator/l1ca_code_tb/: CMakeLists.txt
RTL/Simulated/verilator/sd_tb/: CMakeLists.txt  sim_main.cpp
RTL/Simulated/verilator/spi_tx/: CMakeLists.txt  sim_main.cpp
RTL/Simulated/verilator/spi_tx_tb/: CMakeLists.txt
RTL/Simulated/verilator/uart_rx/: CMakeLists.txt  sim_main.cpp  wave.gtkw
RTL/Simulated/verilator/uart_rx_tb/: CMakeLists.txt  sim_main.cpp
RTL/Simulated/verilator/uart_tx/: CMakeLists.txt  sim_main.cpp  wave.gtkw
RTL/Simulated/verilator/uart_tx_tb/: CMakeLists.txt  sim_main.cpp
RTL/constraints/: Arty-S7-50-Master.xdc
RTL/inc/: common_types.vh
RTL/scripts/: fft_4096.tcl  l1ca_ac_pca_search.tcl  sd_top.tcl  sd_top_test.tcl
RTL/src/dsp/fft/: butterfly_unit.sv  control_unit.sv  fft_4096.sv  memory_unit.sv  twiddle_unit.sv
RTL/src/frontend/: frontend_config.sv
RTL/src/gps/: l1ca_ac_pca_search.sv
RTL/src/memory/: dpram.v  simple_dual_two_clocks.v  spram.v
RTL/src/sd/: sd_cmd.sv  sd_crc.sv  sd_data.sv  sd_host.sv
RTL/src/sd/sd_fake/: sd_const.vh  sd_mgr.v  sd_top.v
RTL/testbench/dsp/fft/: fft_4096_tb.sv
RTL/testbench/frontend/: frontend_config_tb.sv
RTL/testbench/gps/: l1ca_ac_pca_search_tb.sv
RTL/testbench/sd/: sd_tb.sv
RTL/testbench/uart/: uart_rx_tb.sv
RTL/top/: sd_top.sv  sd_top_test.sv
RTL/verilator/fft_4096_tb/: CMakeLists.txt  sim_main.cpp
RTL/verilator/frontend_config_tb/: CMakeLists.txt  sim_main.cpp
RTL/verilator/l1ca_ac_pca_search_tb/: CMakeLists.txt  sim_main.cpp
RTL/verilator/l1ca_code_tb/: CMakeLists.txt  sim_main.cpp
RTL/verilator/sd_tb/: CMakeLists.txt  sim_main.cpp
RTL/verilator/spi_tx_tb/: CMakeLists.txt  sim_main.cpp
RTL/verilator/uart_rx_tb/: CMakeLists.txt
RTL/verilator/uart_tx_tb/: CMakeLists.txt
Simulation/: .gitignore  CMakeLists.txt
Simulation/fftw3/: libfftw3-3.exp  libfftw3-3.lib
Simulation/inc/: constants.h  l1ca_code.h  l1ca_search_ac_pca.h  types.h
Simulation/src/: CMakeLists.txt  l1ca_code.cpp  l1ca_search_ac_pca.cpp  main.cpp
